data/clouds/test-cloud/setup/cluster-services/longhorn/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  rules:
    - host: "longhorn.internal.cloud2.payne.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - secretName: wildcard-internal-wild-cloud-tls
      hosts:
        - "longhorn.internal.cloud2.payne.io"
